--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,9 +4,9 @@ pandas>=2.2.0
 django-cors-headers==4.3.1
 reportlab==4.0.7
 openpyxl==3.1.2
-djongo==1.3.6
-pymongo==3.12.3
-dnspython==2.6.1
+# djongo==1.3.6  # Removed due to dependency conflicts - use if needed for MongoDB
+# pymongo==3.12.3  # Removed - use if needed for MongoDB
+# dnspython==2.6.1  # Removed - only needed for MongoDB
 gunicorn==21.2.0
 python-dotenv==1.0.0
 whitenoise==6.6.0
