Update frontend .env.production with better documentation for API URL configuration

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,7 @@
 # Production Environment Variables for Vercel
+# IMPORTANT: Replace 'your-backend-url' with your actual Render backend URL
+# Example: https://your-app-name.onrender.com/api
+
 REACT_APP_API_URL=https://your-backend-url.onrender.com/api
 REACT_APP_VERSION=1.1.0.0
 REACT_APP_ENVIRONMENT=production
